Fix issue with performance validation images not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,7 @@ label {
 #error-container {
     margin: 0 auto;
     clear: both;
-    width: 500px;
+    width: 300px;
     position: relative;
     display: flex;
     justify-content: center;
